font and some minor changes